--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -1,11 +1,13 @@
 .navigation {
-  background-color: transparent;
+  background-color: var(--clr-navbar);
+  position: fixed;
   width: 100%;
   height: 90px;
   border-bottom: 1px solid var(--clr-primary);
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 999;
 }
 
 @media screen and (max-width: 800px) {
