--- a/src/Components/NavBar/NavCenter.module.css
+++ b/src/Components/NavBar/NavCenter.module.css
@@ -1,5 +1,7 @@
 .nav-center {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .nav-items {
   display: flex;
@@ -23,11 +25,11 @@
     font-size: 14px;
   }
 }
-@media screen and (max-width: 500px) {
-  .nav-items {
+@media screen and (max-width: 480px) {
+  .nav-center {
     position: absolute;
-    top: -2px;
-    right: 0;
-    left: -28px;
+    bottom: 8px;
+    right: 50%;
+    left: 50%;
   }
 }
