--- a/src/Components/NavBar/NavRight.module.css
+++ b/src/Components/NavBar/NavRight.module.css
@@ -9,13 +9,43 @@
   font-size: 24px;
   margin: 0px 10px;
   cursor: pointer;
+  border-radius: 50%;
+  color: var(--clr-primary);
+  box-shadow: 0 0 0 1px var(--clr-ani1), 0 0 0 3px var(--clr-ani2),
+    0 0 0 6px var(--clr-ani3);
+  animation: animate 2s infinite linear forwards, rays 2s 2s infinite linear;
 }
 .toggle-theme {
   cursor: pointer;
   color: var(--clr-primary);
   font-size: 21px;
+  padding-bottom: 4px;
   margin: 0px 10px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px var(--clr-ani1), 0 0 0 3px var(--clr-ani2),
+    0 0 0 6px var(--clr-ani3);
+  animation: animate 2s infinite linear forwards, rays 2s 2s infinite linear;
 }
+@keyframes animate {
+  0% {
+    box-shadow: none;
+  }
+}
+@keyframes rays {
+  0% {
+    box-shadow: 0 0 0 0px var(--clr-ani1), 0 0 0 2px var(--clr-ani2),
+      0 0 0 4px var(--clr-ani3);
+  }
+  50% {
+    box-shadow: 0 0 0 2px var(--clr-ani1), 0 0 0 4px var(--clr-ani2),
+      0 0 0 10px var(--clr-ani3);
+  }
+  100% {
+    box-shadow: 0 0 0 0px var(--clr-ani1), 0 0 0 2px var(--clr-ani2),
+      0 0 0 4px var(--clr-ani3);
+  }
+}
+
 @media screen and (max-width: 800px) {
   .github,
   .mail {
@@ -25,5 +55,3 @@
     font-size: 18px;
   }
 }
-
-
