--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -3,7 +3,7 @@
   position: fixed;
   width: 100%;
   height: 90px;
-  border-bottom: 1px solid var(--clr-primary);
+  box-shadow: 0 5px 5px -5px rgb(128, 128, 128, 0.6);
   display: flex;
   justify-content: space-around;
   align-items: center;
