--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,20 @@ html {
   --clr-bcg: #02040e;
   --clr-font: #fff;
   --clr-navbar: rgba(2, 4, 14, 0.8);
-  --clr-primary: #65fcdb;
+  --clr-primary: rgb(101, 252, 219);
+  --clr-ani1: rgba(101, 252, 219, 0.8);
+  --clr-ani2: rgba(101, 252, 219, 0.4);
+  --clr-ani3: rgba(101, 252, 219, 0.2);
   --btn-font: #020403;
 }
 .light {
   --clr-bcg: #fff;
   --clr-font: #02040e;
   --clr-navbar: rgb(255, 255, 255, 0.8);
-  --clr-primary: #db084e;
+  --clr-primary: rgb(219, 8, 78);
+  --clr-ani1: rgba(219, 8, 78, 0.8);
+  --clr-ani2: rgba(219, 8, 78, 0.4);
+  --clr-ani3: rgba(219, 8, 78, 0.2);
   --btn-font: #fff;
 }
 .preloader {
