--- a/src/Components/Screens/Button.module.css
+++ b/src/Components/Screens/Button.module.css
@@ -1,18 +1,19 @@
 .button {
   font: inherit;
-  border: 1px solid var(--btn-color);
-  background: var(--clr-bcg);
+  border: 1px solid var(--clr-primary);
+  background: transparent;
   color: var(--clr-font);
-  padding: 0.75rem 3.5rem;
+  padding: 0.75rem 1.8rem;
   cursor: pointer;
-  font-size: 1.15rem;
-  border-radius: 30px;
+  font-size: 16px;
+  border-radius: 10px;
+  font-weight: 400;
 }
 
 .button:hover,
 .button:active {
-  background: var(--btn-color);
-  border-color: var(--btn-color);
+  background: var(--clr-primary);
+ color: var(--btn-font);
   transition: var(--transition);
 }
 
