--- a/src/Components/Home/Technical/TechnicalButton.module.css
+++ b/src/Components/Home/Technical/TechnicalButton.module.css
@@ -7,6 +7,7 @@
   font-size: 14px;
   border: none;
   border-radius: 4px;
+  padding: 4px 40px;
 }
 .btn .button:hover {
   background: none;
@@ -17,4 +18,16 @@
   border-bottom: 1px solid var(--clr-primary);
   color: var(--clr-primary);
   font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+ .btn .button {
+    padding: 4px 28px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+ .btn .button {
+    padding: 4px 18px;
+  }
 }
