--- a/src/Components/Home/Contact/Contact.module.css
+++ b/src/Components/Home/Contact/Contact.module.css
@@ -1,11 +1,11 @@
 .contact-section {
   position: relative;
-  margin-top: 60px;
   width: 100%;
   height: 100vh;
   text-align: center;
 }
 .contact-section img {
+  background-size: cover;
   width: 100%;
   height: 100%;
   z-index: -1;
