--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,5 +1,34 @@
-.footer-section{
-    width: 100%;
-    height: 100vh;
-    border-top: 1px solid silver;
+.footer-section {
+  width: 100%;
+  height: 100%;
+  background: #050627;
+  margin-bottom: -100px;
+}
+.logo {
+  text-align: center;
+  padding-top: 40px;
+}
+.logo img {
+  width: 140px;
+  height: auto;
+}
+.text-content{
+    text-align: center;
+    padding-top: 40px;
+    color: var(--text-color);
+}
+.footer-contact {
+  text-align: center;
+  padding-top: 40px;
+}
+.copyright {
+  color: var(--text-color);
+  text-align: center;
+ padding: 40px 0px 100px 0px;
+}
+
+@media screen and (max-width: 410px) {
+  .copyright {
+    font-size: 12px;
+  }
 }
