--- a/src/Components/Home/About/AboutInfo.css
+++ b/src/Components/Home/About/AboutInfo.css
@@ -6,15 +6,14 @@
 }
 
 .icon {
-  font-weight: 400;
-  font-size: 22px;
-  margin: 0 20px;
+  font-size: 26px;
+  margin-right: 10px;
   color: var(--clr-primary);
 }
 .content {
   color: var(--clr-font);
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
 }
 .content:hover {
