--- a/src/Components/Home/About/TextAnimation.module.css
+++ b/src/Components/Home/About/TextAnimation.module.css
@@ -1,6 +1,7 @@
 .content {
   text-align: center;
-  font-size: 26px;
+  font-size: 30px;
+  font-weight: 500;
 }
 .text.is-animation {
   margin: 30px;
