--- a/src/Components/Home/Contact/Contact.module.css
+++ b/src/Components/Home/Contact/Contact.module.css
@@ -1,6 +1,5 @@
 .contact-section {
   position: relative;
-  margin-top: 10px;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -15,6 +14,6 @@
   position: absolute;
   background-color: var(--clr-overlay);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0px;
 }
