--- a/src/Components/Home/Contact/Contact.module.css
+++ b/src/Components/Home/Contact/Contact.module.css
@@ -1,19 +1,3 @@
 .contact-section {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-.contact-section img {
-  width: 100%;
-  height: 100vh;
-  z-index: -1;
-}
-
-.overlay {
-  position: absolute;
-  background-color: var(--clr-overlay);
-  width: 100%;
-  height: 100%;
-  top: 0px;
+  margin-top: 20px;
 }
