--- a/src/Components/Home/Contact/ContactTitle.module.css
+++ b/src/Components/Home/Contact/ContactTitle.module.css
@@ -1,16 +1,14 @@
 .contact-title {
-    position: absolute;
-    top: 48px;
-    left: 0px;
-    right: 0px;
-  }
-  .underline {
-    width: 78px;
-    margin: 0 8px;
-    background-color: var(--clr-primary);
-  }
-  .icon {
-    font-size: 20px;
-    color: var(--clr-primary);
-    margin-top: -8px;
-  }
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.underline {
+  width: 78px;
+  margin: 0 8px;
+  background-color: var(--clr-primary);
+}
+.icon {
+  font-size: 20px;
+  color: var(--clr-primary);
+  margin-top: -8px;
+}
