--- a/src/Components/PortFolio/All/AllPortfolio.css
+++ b/src/Components/PortFolio/All/AllPortfolio.css
@@ -44,19 +44,22 @@
   font-size: 24px;
   position: absolute;
   bottom: 12px;
-  left: 10px;
+  left: 20px;
 }
+
 .download {
   color: var(--clr-primary);
   font-size: 24px;
   position: absolute;
-  right: 10px;
+  right: 20px;
   bottom: 12px;
 }
-
+.code:hover,
+.download:hover {
+  color: var(--clr-primary);
+}
 @media screen and (max-width: 1199px) {
-    .portfolio-item{
-        margin: 0px;
-    }
-    
+  .portfolio-item {
+    margin: 0px;
+  }
 }
