--- a/src/Components/PortFolio/Portfolio.module.css
+++ b/src/Components/PortFolio/Portfolio.module.css
@@ -1,14 +1,15 @@
 .portfolio-section {
   padding-top: 90px;
 }
-.title{
-    padding: 20px 0px;
+.title {
+  padding: 20px 0px;
 }
-.icon{
-    font-size: 24px;
-    color: var(--clr-primary);
+.icon {
+  font-size: 24px;
+  margin-top: -4px;
+  color: var(--clr-primary);
 }
-.underline{
-    width: 80px;
-    background: var(--clr-primary);
+.underline {
+  width: 80px;
+  background: var(--clr-primary);
 }
