--- a/src/Components/Blog/BlogView/BlogView.module.css
+++ b/src/Components/Blog/BlogView/BlogView.module.css
@@ -2,15 +2,13 @@
   position: absolute;
   top: 90px;
   left: 0;
-  right: 360px;
-  background-color: red;
+  right: 38%;
 }
 .blog-view-right {
   position: fixed;
-  top: 90px;
-  right: 0;
-  width: 360px;
-  background: green;
+  top: 120px;
+  right: 10px;
+  width: 34%;
   height: 100%;
   padding-bottom: 100px;
   overflow-x: hidden;
@@ -22,25 +20,50 @@
   width: 0px;
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 960px) {
   .blog-view-left {
+    padding-top: 100px;
+    padding-bottom: 30px;
     position: static;
     width: 100%;
+    border-bottom: 1px solid gray;
   }
   .blog-view-right {
     position: static;
     width: 100%;
+    padding-bottom: 0;
   }
   .blog-view {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px 160px;
   }
   .footer {
     display: block;
   }
   .footer-left {
     display: none;
+  }
+}
+@media screen and (max-width: 860px) {
+  .blog-view {
+    padding: 10px 110px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .blog-view {
+    padding: 10px 90px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .blog-view {
+    padding: 10px 40px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .blog-view {
+    padding: 10px 20px;
   }
 }
