--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .navigation {
   background-color: var(--clr-navbar);
+  box-shadow: 0 4px 4px -4px rgb(128, 128, 128, 0.4);
   position: fixed;
   width: 100%;
   height: 90px;
