--- a/src/Components/Blog/SideBar/SideBar.module.css
+++ b/src/Components/Blog/SideBar/SideBar.module.css
@@ -1,16 +1,39 @@
 .sideBar {
   position: fixed;
-  top: 120px;
-  right: 2px;
+  top: 140px;
+  right: 0px;
   width: calc(100% - 65%);
   overflow-x: hidden;
-  padding-bottom: 100px;
+  bottom: 0;
 }
-.sideBarTitle{
-    text-align: center;
-    border-bottom: 1px solid gray;
-    border-top: 1px solid gray;
-    padding: 4px 0px;
+.sideBar::-webkit-scrollbar{
+  width: 0px;
+}
+.sideBarTitle {
+  text-align: center;
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
+  padding: 4px 0px;
+  margin: 0 10px;
+}
+.sideBarList {
+  margin-bottom: 30px;
+}
+.sideBarListItem {
+  display: inline-block;
+  width: 33%;
+  margin-top: 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.sideBarListItem:hover {
+  color: var(--clr-primary);
+  font-weight: 500;
+  transition: var(--transition);
+}
+.sideBarFooter {
+  text-align: center;
+  padding: 30px 0px;
 }
 @media screen and (max-width: 960px) {
   .sideBar {
