--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,10 @@ html {
 }
 .dark {
   --clr-bcg: #02040e;
+  --clr-bg-admin: #000;
   --clr-font: #fff;
   --clr-navbar: rgba(2, 4, 14, 0.8);
-  --clr-overlay: rgba(2, 4, 14, 0.8);
+  --clr-overlay: rgba(2, 4, 14, 0.2);
   --clr-primary: rgb(101, 252, 219);
   --clr-ani1: rgba(101, 252, 219, 0.4);
   --clr-ani2: rgba(101, 252, 219, 0.3);
@@ -29,9 +30,10 @@ html {
 }
 .light {
   --clr-bcg: #fff;
+  --clr-bg-admin: #e2dcdc;
   --clr-font: #02040e;
-  --clr-navbar: rgb(255, 255, 255, 0.8);
-  --clr-overlay: rgb(255, 255, 255, 0.9);
+  --clr-navbar: rgba(255, 255, 255, 0.8);
+  --clr-overlay: rgba(255, 255, 255, 0.2);
   --clr-primary: rgb(219, 8, 78);
   --clr-ani1: rgba(219, 8, 78, 0.4);
   --clr-ani2: rgba(219, 8, 78, 0.3);
