--- a/src/Components/NavBar/NavRight.module.css
+++ b/src/Components/NavBar/NavRight.module.css
@@ -9,7 +9,7 @@
   font-size: 26px;
   margin: 0px 10px;
   cursor: pointer;
-  border-radius: 50%;
+  border-radius: 6px;
   color: var(--clr-primary);
   box-shadow: 0 0 0 1px var(--clr-ani1), 0 0 0 3px var(--clr-ani2),
     0 0 0 6px var(--clr-ani3);
@@ -25,7 +25,7 @@
   padding-bottom: 2px;
   padding-right: 0.6px;
   margin: 0px 10px;
-  border-radius: 50%;
+  border-radius: 6px;
   box-shadow: 0 0 0 1px var(--clr-ani1), 0 0 0 3px var(--clr-ani2),
     0 0 0 6px var(--clr-ani3);
   animation: animate 2s infinite linear forwards, rays 2s 2s infinite linear;
