--- a/src/Components/Resume/Contact/ContactForm.module.css
+++ b/src/Components/Resume/Contact/ContactForm.module.css
@@ -11,10 +11,13 @@
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: transparent;
-  border: 1px solid var(--clr-primary);
+  border: 1px solid #808080;
   color: var(--clr-font);
   font-weight: 400;
   resize: vertical;
+}
+.textarea:focus{
+  border: 1px solid var(--clr-primary);
 }
 .input-form{
     width: 50%;
