--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,16 @@ html {
   --clr-ani3: rgba(219, 8, 78, 0.1);
   --btn-font: #fff;
 }
-.preloader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+#preloader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.preloaderIcon {
+  padding-top: 6px;
 }
 body {
   background: var(--clr-bcg);
