--- a/src/Components/Screens/Input.module.css
+++ b/src/Components/Screens/Input.module.css
@@ -1,11 +1,11 @@
 .input {
   padding: 1rem;
   border-radius: 0.5rem;
-  background-color: transparent;
-border: 1px solid #808080;
+  background-color: var(--clr-bcg);
+  border: 1px solid #808080;
   color: var(--clr-font);
   font-weight: 400;
 }
-.input:focus{
+.input:focus {
   border: 1px solid var(--clr-primary);
 }
