--- a/src/Components/NavBar/NavLeft.module.css
+++ b/src/Components/NavBar/NavLeft.module.css
@@ -1,10 +1,12 @@
-.logo {
-  width: 120px;
-  height: auto;
+.navLeft {
+  font-size: 26px;
+  background: -webkit-linear-gradient(#db084e, #65fcdb);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @media screen and (max-width: 510px) {
-  .logo {
-    margin-top: -36px;
+  .navLeft {
+    margin-top: -20px;
   }
 }
