--- a/src/Components/Resume/About/AboutLeft.css
+++ b/src/Components/Resume/About/AboutLeft.css
@@ -1,6 +1,8 @@
 .me {
+  border-radius: 50%;
   width: 200px;
   height: 220px;
+  border: 3px solid var(--clr-primary);
 }
 .my-name {
   margin-top: 10px;
